fixed alignment on the cards

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -18,7 +18,6 @@ h1 {
 .columnCustom {
   display:flex;
   text-align:center;
-  justify-content: space-evenly;
   width:100%;
   height: 80vh;
 
